manifests/day2-tech-nl-redirect/day2-tech-nl-redirect.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: day2-tech-nl-redirect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'day2.tech' ) {
        rewrite ^ https://day2.nl$request_uri redirect;
      }
      if ($host = 'www.day2.tech' ) {
        rewrite ^ https://day2.nl$request_uri redirect;
      }
spec:
  tls:
  - hosts:
    - day2.tech
    - www.day2.tech
    secretName: day2-tech-nl-redirect
  rules:
  - host: day2.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: dev-null
          servicePort: 80
  - host: www.day2.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: dev-null
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: day2-nl-tech-redirect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'day2.nl' ) {
        rewrite ^ https://day2.tech$request_uri redirect;
      }
      if ($host = 'www.day2.nl' ) {
        rewrite ^ https://day2.tech$request_uri redirect;
      }
      if ($host = 'testyredirect.day2.nl' ) {
        rewrite ^ https://day2.tech$request_uri redirect;
      }
spec:
  tls:
  - hosts:
    - testyredirect.day2.nl
    - day2.nl
    - www.day2.nl
    secretName: day2-nl-tech-redirect
  rules:
  - host: www.day2.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: dev-null
          servicePort: 80
  - host: day2.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: dev-null
          servicePort: 80
  - host: testyredirect.day2.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: dev-null
          servicePort: 80
